# VRCFT-SteamLink

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  QUICKSTART.md  README.md  build-linux.sh  build-windows.bat  build-windows.ps1  setup-linux.sh
.github/workflows/: build.yml
SLVRCFT/SLExtTrackingModule/: SLExtTrackingModule.cs  SLExtTrackingModule.csproj  SLOSC.cs
SLVRCFT/SLOSCParser/: CMakeLists.txt  SLOSCParser.vcxproj  miniosc.h  sloscparser.cpp  sloscparser.h
SLVRCFT/res/: module.json
